--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -94,7 +94,11 @@
                     >Login</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="/Login page/signup.html">SignUp</a></li>
+                <li>
+                  <a class="dropdown-item" href="/Login page/signup.html"
+                    >SignUp</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -149,149 +153,253 @@
 
     <!-- product cards -->
     <div class="container" id="product-cards">
-      <h1 class="text-center" style="color: #212f3d">Recommended for you</h1>
+      <h1 class="text-center" style="color: rgb(21, 120, 218)">
+        Discover our amazing
+        <span style="color: black">Black Friday</span> offers!!
+      </h1>
       <div class="row" style="margin-top: 30px">
+        <!-- product card 1 -->
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./assests/images/samsung tv.jpeg" alt="" />
+            <img
+              src="/productspage/pagescode/tvcode/TVs/40inch/HD-40-Black.webp"
+              alt=""
+            />
             <div class="card-body">
-              <h3 class="text-center">Samsung S95D 65" OLED 2024</h3>
-              <h2>
-                £1000 <span><li class="fa-solid fa-cart-shopping"></li></span>
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./assests/images/a1.png" alt="" />
-            <div class="card-body">
-              <h3 class="text-center">Airpods</h3>
+              <a
+                href="/productspage/pagescode/tvcode/tvs-HD40.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">HD 40 Inch Black TV</h3>
+              </a>
               <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
               </div>
               <h2>
-                £100 <span><li class="fa-solid fa-cart-shopping"></li></span>
+                <del>£199.99</del> £99.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
             </div>
           </div>
         </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./assests/images/laptop2.png" alt="" />
-            <div class="card-body">
-              <h3 class="text-center">Laptop</h3>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>
-                £200 <span><li class="fa-solid fa-cart-shopping"></li></span>
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./assests/images/t1.png" alt="" />
-            <div class="card-body">
-              <h3 class="text-center">Ipad</h3>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>
-                £300 <span><li class="fa-solid fa-cart-shopping"></li></span>
-              </h2>
-            </div>
-          </div>
-        </div>
-      </div>
+        <!-- product card 1 -->
 
-      <div class="row" style="margin-top: 30px">
+        <!-- product card 2 -->
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./assests/images/w1.png" alt="" />
+            <img
+              src="/productspage/pagescode/headphonescode/Headphones/overeargrey.webp"
+              alt=""
+            />
             <div class="card-body">
-              <h3 class="text-center">Smart Watch</h3>
+              <a
+                href="/productspage/pagescode/headphonescode/overeargrey.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">Over Ear Grey Headphones</h3>
+              </a>
               <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
               </div>
               <h2>
-                £50.60 <span><li class="fa-solid fa-cart-shopping"></li></span>
+                <del>£40.99</del> £30.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
             </div>
           </div>
         </div>
+        <!-- product card 2 -->
+
+        <!-- product card 3 -->
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./assests/images/pcm1.png" alt="" />
+            <img
+              src="/productspage/pagescode/laptopscode/Laptops/16inch/Probook-16-black.webp"
+              alt=""
+            />
             <div class="card-body">
-              <h3 class="text-center">PC Moniter</h3>
+              <a
+                href="/productspage/pagescode/laptopscode/laptops-16P.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">16 inch Black Probook</h3>
+              </a>
               <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
               </div>
               <h2>
-                £600 <span><li class="fa-solid fa-cart-shopping"></li></span>
+                <del>£499.99</del> £449.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
             </div>
           </div>
         </div>
+        <!-- product card 3 -->
+
+        <!-- product card 4 -->
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./assests/images/phone1.png" alt="" />
+            <img
+              src="/productspage/pagescode/monitorscode/Monitors/30inch/4k-30-White.webp"
+              alt=""
+            />
             <div class="card-body">
-              <h3 class="text-center">iPhone x</h3>
+              <a
+                href="/productspage/pagescode/monitorscode/monitors-4K30.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">30 Inch White Monitor 4K</h3>
+              </a>
               <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
               </div>
               <h2>
-                £500 <span><li class="fa-solid fa-cart-shopping"></li></span>
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./assests/images/h1.png" alt="" />
-            <div class="card-body">
-              <h3 class="text-center">Headphone</h3>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>
-                £60 <span><li class="fa-solid fa-cart-shopping"></li></span>
+                <del>£259.99</del> £209.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
             </div>
           </div>
         </div>
       </div>
+      <!-- product card 4 -->
+
+      <!-- product card 5 -->
+      <div class="row" style="margin-top: 30px">
+        <div class="col-md-3 py-3 py-md-0">
+          <div class="card">
+            <img
+              src="/productspage/pagescode/consolescode/Consoles/PS5/PS5 White.webp"
+              alt=""
+            />
+            <div class="card-body">
+              <a
+                href="/productspage/pagescode/consolescode/ps5.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">Playstation 5</h3>
+              </a>
+              <div class="star text-center">
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+              </div>
+              <h2>
+                <del>£259.99</del> £159.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- product card 5 -->
+
+        <!-- product card 6 -->
+        <div class="col-md-3 py-3 py-md-0">
+          <div class="card">
+            <img
+              src="/productspage/pagescode/tvcode/TVs/80inch/4k-80-Black.webp"
+              alt=""
+            />
+            <div class="card-body">
+              <a
+                href="/productspage/pagescode/consolescode/ps5.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">80-Inch Black TV 4k</h3>
+              </a>
+              <div class="star text-center">
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+              </div>
+              <h2>
+                <del>£349.99</del> £299.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- product card 6 -->
+
+        <!-- product card 7 -->
+        <div class="col-md-3 py-3 py-md-0">
+          <div class="card">
+            <img
+              src="/productspage/pagescode/laptopscode/Laptops/16inch/Windows-16-White.webp"
+              alt=""
+            />
+            <div class="card-body">
+              <a
+                href="/productspage/pagescode/laptopscode/laptops-16W.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">16 inch Windows Laptop</h3>
+              </a>
+              <div class="star text-center">
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+              </div>
+              <h2>
+                <del>£449.99</del> £399.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- product card 7 -->
+
+        <!-- product card 8 -->
+        <div class="col-md-3 py-3 py-md-0">
+          <div class="card">
+            <img
+              src="/productspage/pagescode/headphonescode/Headphones/inearblack.webp"
+              alt=""
+            />
+            <div class="card-body">
+              <a
+                href="/productspage/pagescode/laptopscode/laptops-16W.html"
+                style="text-decoration: none; color: inherit"
+              >
+                <h3 class="text-center">In Ear Black Headphones</h3>
+              </a>
+              <div class="star text-center">
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+                <i class="fa-solid fa-star unchecked"></i>
+              </div>
+              <h2>
+                <del>£20.99</del> £15.99
+                <span><li class="fa-solid fa-cart-shopping"></li></span>
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- product card 8 -->
     </div>
     <!-- product cards -->
 
