--- a/productspage/index.html
+++ b/productspage/index.html
@@ -120,16 +120,17 @@
           </ul>
          
           <form class="d-flex" id="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
+
+          <div class="d-flex">
+            <div class row="">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </div>
+          </div>
+
           <div class="cart-btn">
             <a href="/checkoutpage/cart.html"
               ><i class="fas fa-shopping-bag"></i
