--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Wishlist</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style_cart.css">
+    <link rel="stylesheet" href="style_wishlist.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,60 +26,41 @@
     </nav>
 
     <div class="container mt-5">
-        <h1>Shopping Cart</h1>
-        <div id="cart-items"></div>
-        <div class="cart-summary mt-4">
-            <h2>Total: <span id="total-price">$0.00</span></h2>
-            <button class="btn btn-primary" onclick="checkout()">Proceed to Checkout</button>
-        </div>
+        <h1>My Wishlist</h1>
+        <div id="wishlist-items"></div>
     </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            let cart = JSON.parse(localStorage.getItem("cart")) || [];
-            const cartItemsContainer = document.getElementById("cart-items");
-            const totalPriceElement = document.getElementById("total-price");
+            let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+            const wishlistContainer = document.getElementById("wishlist-items");
 
-            function updateCartDisplay() {
-                cartItemsContainer.innerHTML = "";
-                let total = 0;
-                if (cart.length === 0) {
-                    cartItemsContainer.innerHTML = "<p>Your cart is empty.</p>";
+            function updateWishlistDisplay() {
+                wishlistContainer.innerHTML = "";
+                if (wishlist.length === 0) {
+                    wishlistContainer.innerHTML = "<p>Your wishlist is empty.</p>";
                 } else {
-                    cart.forEach((item, index) => {
-                        total += item.price * item.quantity;
-                        cartItemsContainer.innerHTML += `
-                            <div class="cart-item d-flex justify-content-between align-items-center border p-3 mb-2">
+                    wishlist.forEach((item, index) => {
+                        wishlistContainer.innerHTML += `
+                            <div class="wishlist-item d-flex justify-content-between align-items-center border p-3 mb-2">
                                 <div>
                                     <p><strong>${item.name}</strong></p>
                                     <p>Price: $${item.price.toFixed(2)}</p>
-                                    <p>Quantity: <input type="number" min="1" value="${item.quantity}" onchange="updateQuantity(${index}, this.value)"></p>
                                 </div>
                                 <button class="btn btn-danger" onclick="removeItem(${index})">Remove</button>
                             </div>
                         `;
                     });
                 }
-                totalPriceElement.textContent = `$${total.toFixed(2)}`;
-                localStorage.setItem("cart", JSON.stringify(cart));
+                localStorage.setItem("wishlist", JSON.stringify(wishlist));
             }
 
-            window.updateQuantity = function(index, quantity) {
-                if (quantity < 1) return;
-                cart[index].quantity = parseInt(quantity);
-                updateCartDisplay();
-            };
-
             window.removeItem = function(index) {
-                cart.splice(index, 1);
-                updateCartDisplay();
+                wishlist.splice(index, 1);
+                updateWishlistDisplay();
             };
 
-            window.checkout = function() {
-                alert("Proceeding to checkout...");
-            };
-
-            updateCartDisplay();
+            updateWishlistDisplay();
         });
     </script>
 </body>
